refactor(knockbackffa): games-common adoptieren, Duplikate und tote Klassen entfernen
- PlayerUtils durch games-common PlayerMessages ersetzt (identische NMS-Logik), Klasse + Feld entfernt
- Leere CombatLogTask-Klasse entfernt
- Doppelt registrierte FoodLevelChange-/DropItem-Handler dedupliziert (Cancel-Verhalten identisch)
- Listener-Scan: Fehler werden geloggt statt geschluckt, deprecated Class.newInstance ersetzt
- Pattern-Matching für instanceof, überflüssige Null-Vergleiche entfernt